Fixed toList() method (Java compatibility)